Bug 553053 - Should not create frames for SVG animation elements, it interferes with clipPath validation and is inefficient. r=dholbert,sr=roc